# mrs_simulation

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.ci/: ci_before_install.sh  deploy_key_github.enc  install.sh
.github/workflows/: noetic.yml
ROMFS/px4fmu_common/init.d-posix/: 4001_t650  4011_f450  6010_f550  8002_eaglemk2  px4-rc.mavlink  rc.replay  rcS
ROMFS/px4fmu_common/init.d-posix/airframes/: 11001_brus  12001_big_dofec  12001_naki  12013_naki  4001_f330  4001_t650  4001_x500  4011_f450  6010_f550  8002_eaglemk2
ROMFS/px4fmu_common/mixers/: octo_cox_w.main.mix  octo_x_reversed.main.mix  quad_x.main.mix
config/: model_params.yaml  spawner_params.yaml  spawner_params.yaml.orig
launch/: dangerous_pixhawk_only_takeoff.launch  mrs_drone_spawner.launch  parametrized_spawn.launch  px4_sitl.launch  run_simulation_firmware.launch  run_simulation_mavros.launch  simulation.launch  spawn_simulation_model.launch
launch/mavros/: mavros.launch  px4.launch  px4_pluginlists.yaml
models/mrs_robots_description/meshes/custom/naki/: NAKI_gimbal_movable_part.dae  NAKI_legless_frame.dae  NAKI_sony_alpha_6500_w_gimbal_mount.dae
models/mrs_robots_description/meshes/t_drones/m690b/: m690.blend  m690.blend1
models/mrs_robots_description/meshes/tarot/t650/: tarot_t650_uvdar_mount.dae
models/mrs_robots_description/meshes/x500v2/: bottom_board_mesh_file.stl  gps_mount_mesh_file.stl  motor_top_mesh_file.stl  prop_ccw_mesh_file.stl  prop_cw_mesh_file.stl  top_board_mesh_file.stl
models/mrs_robots_description/sdf/: component_snippets.sdf.jinja  f330.sdf.jinja  f450.sdf.jinja  f550.sdf.jinja  m690.sdf.jinja  naki.sdf.jinja  scout.sdf.jinja  t650.sdf.jinja  x500.sdf.jinja
models/mrs_robots_description/urdf/: component_snippets.sdf.jinja  component_snippets.xacro  f330.sdf.jinja  f330.xacro  f450.sdf.jinja  f450.xacro  f450.xacro.sdf.jinja  f550.sdf.jinja  f550.xacro  naki.sdf.jinja  naki.xacro  t650.sdf.jinja  t650.xacro  x500.sdf.jinja  x500.xacro
msg/: SpawnerDiagnostics.msg
scripts/: dangerous_pixhawk_only_takeoff  dangerous_pixhawk_only_takeoff.py  jinja_gen.py  mrs_drone_spawner  mrs_drone_spawner.py  python_spawn  spawn  spawner.py  xacro_to_jinja.py
scripts/simulation/: __init__.py  spawn.py
scripts/simulation/templates/: parametrized_spawn.em  px4_and_mavros.launch.em
src/: main.cpp
