<?xml version="1.0"?>
<package format="2">
  <name>mrs_simulation</name>
  <version>1.0.3</version>
  <description>This package contains scripts for spawning of vehicles</description>

  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</maintainer>

  <license>BSD 3-Clause</license>

  <author email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>cmake_modules</depend>
  <depend>mavros_msgs</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>px4</depend>
  <depend>mavlink_sitl_gazebo</depend>
  <depend>mrs_gazebo_common_resources</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
  <depend>mrs_msgs</depend>

  <exec_depend>mrs_uav_general</exec_depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
      GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
      the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>

</package>
